# conan-apache-log4cxx

./: .travis.yml  CMakeLists.txt  ExtractVersion.cmake  FindAPR.cmake  FindAPRUtil.cmake  README.md  apache-log4cxx-win2012.patch  appveyor.yml  build.py  conanfile.py  log4cxx-1-gcc.4.4.patch  log4cxx-5-gcc6-fix-narrowing-conversion.patch
test_package/: conanfile.py  example.cpp
